<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bouldr.climbingapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bouldr.climbingapp.DetectorActivity"
        android:label="@string/menu_detection"
        tools:layout="@layout/tfe_od_activity_camera" />

    <fragment
        android:id="@+id/nav_info"
<<<<<<< HEAD
<<<<<<< HEAD
        android:name="com.bouldr.climbingapp.ui.info.InfoListFragment"
=======
        android:name="com.example.climbingapp.ui.info.InfoFragment"
>>>>>>> parent of 3dee2f1... minor adjustments to code
=======
        android:name="com.example.climbingapp.ui.info.InfoFragment"
>>>>>>> parent of 3dee2f1... minor adjustments to code
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.climbingapp.ui.options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.bouldr.climbingapp.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.bouldr.climbingapp.ui.image.ImageFragment"
        android:label="@string/menu_image"
        tools:layout="@layout/fragment_image" />
<<<<<<< HEAD
<<<<<<< HEAD

    <fragment
        android:id="@+id/nav_options"
        android:name="com.bouldr.climbingapp.ui.options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />
=======
>>>>>>> parent of 3dee2f1... minor adjustments to code
=======
>>>>>>> parent of 3dee2f1... minor adjustments to code
</navigation>