<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/model_download"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_hideable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modelAvailable" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelLocal"/>

        <TextView
            android:id="@+id/lblCurrentModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txtCurrent"
            android:text="10512" />

        <TextView
            android:id="@+id/txtCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCurrent"
            android:layout_marginTop="0dp"
            android:text="@string/modelCloud" />

        <TextView
            android:id="@+id/lblCloudModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txtCloud"
            android:layout_below="@+id/lblCurrentModel"
            android:text="20154" />

        <Button
            android:id="@+id/downloadYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="Download" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>
</LinearLayout>